{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 451,
  "lineage": "9ce587af-93cf-dbf7-0bdb-28ac5eaaa082",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:loadbalancer/app/philoberry-alb-test/2244aa795948d918",
            "arn_suffix": "app/philoberry-alb-test/2244aa795948d918",
            "desync_mitigation_mode": "defensive",
            "dns_name": "philoberry-alb-test-987732570.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:loadbalancer/app/philoberry-alb-test/2244aa795948d918",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "philoberry-alb-test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e4a6eb65e6c17637"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054e643dd8edfa705"
              },
              {
                "subnet_id": "subnet-0b03e547d96dafc44"
              }
            ],
            "subnets": [
              "subnet-054e643dd8edfa705",
              "subnet-0b03e547d96dafc44"
            ],
            "tags": {
              "Name": "philoberry_alb_sg-alb-test",
              "Service": "philoberry_alb_sg-test"
            },
            "tags_all": {
              "Name": "philoberry_alb_sg-alb-test",
              "Service": "philoberry_alb_sg-test"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.alb.aws_security_group.philoberry_alb_sg",
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.philoberry_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:listener/app/philoberry-alb-test/2244aa795948d918/179c16009f1d22e4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:targetgroup/philoberry-tg-test/6b670bafb3f9b2e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:listener/app/philoberry-alb-test/2244aa795948d918/179c16009f1d22e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:loadbalancer/app/philoberry-alb-test/2244aa795948d918",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.alb.aws_security_group.philoberry_alb_sg",
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.philoberry_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:targetgroup/philoberry-tg-test/6b670bafb3f9b2e7",
            "arn_suffix": "targetgroup/philoberry-tg-test/6b670bafb3f9b2e7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:targetgroup/philoberry-tg-test/6b670bafb3f9b2e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "philoberry-tg-test",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "philoberry-tg-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-tg-test",
              "Service": "philoberry-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.philoberry_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:targetgroup/philoberry-tg-test/6b670bafb3f9b2e7-20230907045017274200000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:874509284256:targetgroup/philoberry-tg-test/6b670bafb3f9b2e7",
            "target_id": "i-09473266089743b5d"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.alb.data.aws_instances.tag",
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.philoberry_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "philoberry_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:security-group/sg-0e4a6eb65e6c17637",
            "description": "philoberry alb sg production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4a6eb65e6c17637",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "philoberry_alb_web_ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "philoberry_alb_web_ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "philoberry-alb-sg-test",
            "name_prefix": "",
            "owner_id": "874509284256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "philoberry-alb-sg-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-alb-sg-test",
              "Service": "philoberry-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_instance.ec2",
            "module.ec2.aws_security_group.philoberry_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c9c942bd7bf113a2",
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:instance/i-09473266089743b5d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09473266089743b5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkeypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d93bd13c1ba254c",
            "private_dns": "ip-172-16-2-67.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02170ac3405064334",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a856c4b458d5fb9d",
            "tags": {
              "Name": "philoberry-api-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-api-test",
              "Service": "philoberry-test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0862ed8da3a0c5dd1"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.philoberry_sg",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "philoberry_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:security-group/sg-0862ed8da3a0c5dd1",
            "description": "philoberry api sg production",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0862ed8da3a0c5dd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "philoberry-api-sg-test",
            "name_prefix": "",
            "owner_id": "874509284256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "philoberry-api-sg-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-api-sg-test",
              "Service": "philoberry-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01553e26f7e8151db",
            "domain": "vpc",
            "id": "eipalloc-01553e26f7e8151db",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-35-185-214.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.185.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "philoberry-natgw-eip_1-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-natgw-eip_1-test",
              "Service": "philoberry-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bff67fbd6908805",
            "domain": "vpc",
            "id": "eipalloc-04bff67fbd6908805",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-35-94-224.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.94.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "philoberry-natgw-eip_2-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-natgw-eip_2-test",
              "Service": "philoberry-test"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:internet-gateway/igw-01a15316d9c560464",
            "id": "igw-01a15316d9c560464",
            "owner_id": "874509284256",
            "tags": {
              "Name": "philoberry-igw-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-igw-test",
              "Service": "philoberry-test"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01553e26f7e8151db",
            "association_id": "eipassoc-0760544759ebe9ec0",
            "connectivity_type": "public",
            "id": "nat-0d005ab4d74ab1c11",
            "network_interface_id": "eni-0967aabe0bd6edb01",
            "private_ip": "172.16.0.185",
            "public_ip": "3.35.185.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b03e547d96dafc44",
            "tags": {
              "Name": "philoberry-natgw-public1-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-natgw-public1-test",
              "Service": "philoberry-test"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bff67fbd6908805",
            "association_id": "eipassoc-084eefdcc77d6981f",
            "connectivity_type": "public",
            "id": "nat-0b152dcaf3cfe43c2",
            "network_interface_id": "eni-0167c488e43b14cb8",
            "private_ip": "172.16.1.129",
            "public_ip": "3.35.94.224",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-054e643dd8edfa705",
            "tags": {
              "Name": "philoberry-natgw-public2-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-natgw-public2-test",
              "Service": "philoberry-test"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_2",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:route-table/rtb-02b7c93126b23cf02",
            "id": "rtb-02b7c93126b23cf02",
            "owner_id": "874509284256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d005ab4d74ab1c11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "philoberry-private-rt-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-private-rt-test",
              "Service": "philoberry-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_nat_gateway.natgw_1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:route-table/rtb-07f8372cafd79912c",
            "id": "rtb-07f8372cafd79912c",
            "owner_id": "874509284256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a15316d9c560464",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "philoberry-public-rt-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-public-rt-test",
              "Service": "philoberry-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a554030bf90661ef",
            "route_table_id": "rtb-02b7c93126b23cf02",
            "subnet_id": "subnet-0a856c4b458d5fb9d"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_nat_gateway.natgw_1",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0931c812e0fa31a5b",
            "route_table_id": "rtb-02b7c93126b23cf02",
            "subnet_id": "subnet-0498efc089ceffaa8"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_nat_gateway.natgw_1",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09151200e91b1a702",
            "route_table_id": "rtb-02b7c93126b23cf02",
            "subnet_id": "subnet-0706014a360adc1a9"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_nat_gateway.natgw_1",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-3",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00793d47893ecd26d",
            "route_table_id": "rtb-02b7c93126b23cf02",
            "subnet_id": "subnet-0432ea9cbbccd841b"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_1",
            "module.vpc.aws_nat_gateway.natgw_1",
            "module.vpc.aws_route_table.private-rt",
            "module.vpc.aws_subnet.private-subnet-4",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae834a459f0c1119",
            "route_table_id": "rtb-07f8372cafd79912c",
            "subnet_id": "subnet-0b03e547d96dafc44"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07afc5672e2dbebf9",
            "route_table_id": "rtb-07f8372cafd79912c",
            "subnet_id": "subnet-054e643dd8edfa705"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:subnet/subnet-0a856c4b458d5fb9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a856c4b458d5fb9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874509284256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "philoberry-private-subnet-1-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-private-subnet-1-test",
              "Service": "philoberry-test"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:subnet/subnet-0498efc089ceffaa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0498efc089ceffaa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874509284256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "philoberry-private-subnet-2-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-private-subnet-2-test",
              "Service": "philoberry-test"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:subnet/subnet-0706014a360adc1a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0706014a360adc1a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874509284256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "philoberry-private-subnet-3-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-private-subnet-3-test",
              "Service": "philoberry-test"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:subnet/subnet-0432ea9cbbccd841b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0432ea9cbbccd841b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "874509284256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "philoberry-private-subnet-4-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-private-subnet-4-test",
              "Service": "philoberry-test"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:subnet/subnet-0b03e547d96dafc44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b03e547d96dafc44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874509284256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "philoberry-public-subnet-1-test",
              "Service": "philoberry-{var.servic_type}"
            },
            "tags_all": {
              "Name": "philoberry-public-subnet-1-test",
              "Service": "philoberry-{var.servic_type}"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:subnet/subnet-054e643dd8edfa705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054e643dd8edfa705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "874509284256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "philoberry-public-subnet-2-test",
              "Service": "philoberry-test"
            },
            "tags_all": {
              "Name": "philoberry-public-subnet-2-test",
              "Service": "philoberry-test"
            },
            "vpc_id": "vpc-0ed8fd2033c25ba3a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:874509284256:vpc/vpc-0ed8fd2033c25ba3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-09286a3e87e05384e",
            "default_route_table_id": "rtb-03c2f49fad6940a03",
            "default_security_group_id": "sg-01b95217e917d618a",
            "dhcp_options_id": "dopt-078336a6886a2b5f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed8fd2033c25ba3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c2f49fad6940a03",
            "owner_id": "874509284256",
            "tags": {
              "Name": "philoberry-vpc-test",
              "Service": "philoberry-{var.service_type}"
            },
            "tags_all": {
              "Name": "philoberry-vpc-test",
              "Service": "philoberry-{var.service_type}"
            }
          }
        }
      ]
    }
  ]
}